# prm_annotation_platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: abstraction.py  api_testing.py  config.json  config.py  database.db  database.py  dataset_example.json  db_json_conversion.py  log.txt  main_test.py  models.py  prmbench_database.db  prmbench_export.json  requirements.txt  sanity_test.py  server.py  test_api.sh  test_database.db  users.json  utils.py
backend/app/: database.py  exceptions.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  security.py
backend/app/crud/: annotation.py  base.py  dataset.py  issue.py  problem.py  user.py
backend/app/models/: annotation.py  base.py  dataset.py  issue.py  problem.py  user.py
backend/app/schemas/: annotation.py  base.py  dataset.py  issue.py  problem.py  user.py
backend/models/: annotation.py  dataset.py  issue.py  problem.py  user.py
backend/old/src/: routes.py
backend/routes/: __init__.py  annotations.py  datasets.py  issues.py  problems.py  users.py
backend/src/: auth.py  database.py  main.py  models.py  routes.py  test_main.py
backend/test_data/: process.py
backend/test_data/normalized/: FRoG-easy_selected.json  boolean_expressions_selected.json  disambiguation_qa_selected.json  gpqa_selected.json  logicQA_samples.jsonl  logical_deduction_five_objects_selected.json  math_selected.json  (+1 more)
backend/testing/: test_data.json
frontend/: .gitignore  bun.lockb  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.js  App.tsx  index.js
(+17 files in other folders)
